# mlbh2h

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
data/: rules_sample.json
data/sample/: roster.json  scoring.json
scripts/: .gitignore  README.md  package-lock.json  package.json  roster-parser.js
src/: league.rs  main.rs  roster.rs  scoring_rule.rs  stats.rs  utils.rs  version.rs
src/league/: roster.rs  scoring.rs
src/stats/: output.rs  schedule.rs  sportradar.rs
testdata/: batter_stats.json  pitcher_stats.json  players_converted.json  schedule.json  summary.json
