[package]
name = "mlbh2h"
version = "0.14.1"
authors = ["Soo Philip Jason Kim <philipjkim@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.90", features = [ "derive", "rc" ] }
serde_json = "1.0.39"
reqwest = "0.9.13"
walkdir = "2.2.7"
chrono = "0.4.6"
time = "0.1.42"
log = "0.4.6"
env_logger = "0.6.1"
